src/test/deca/codegen/valid/simple_if_else.deca
// @result Test reussi
/*
    Description : test sur un conditionnelle if else simple

    Résultat : à définir...
*/
{
    boolean x = false;
    if (x){
        println("Test echoue");
    }else{
        println("Test reussi");
    }
}
